apps/base/home-assistant/rtl433-sd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtl433-sd
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rtl433-sd
  template:
    metadata:
      labels:
        app: rtl433-sd
    spec:
      containers:
        - name: rtl433-sd
          image: codeberg.org/penguinoneshaw/rtl433-service-discovery:latest
          imagePullPolicy: Always
          args:
            - bridge
            - --disable-tls-check
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "500m"
