apps/base/home-assistant/rtl433.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtl433
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rtl433
  template:
    metadata:
      labels:
        app: rtl433
    spec:
      containers:
        - name: rtl433
          image: ghcr.io/hertzg/rtl_433_docker
          imagePullPolicy: Always
          args:
            - "-F"
            - "mqtts://$(EMQX_LISTENERS_SERVICE_HOST):$(EMQX_LISTENERS_SERVICE_PORT),user=rtl433,pass=$(RTL_433_PASSWORD),retain=1"
            - "-Y"
            - "squelch"
            - "-Y"
            - "autolevel"
            - "-C"
            - "si"
            - "-M"
            - "time:unix:usec:utc"
            - "-F"
            - log
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
              squat.ai/dvb-t: "1"
            requests:
              memory: "128Mi"
              cpu: "500m"
              squat.ai/dvb-t: "1"
