apps/base/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
endpoints:
  - addresses:
      - 10.1.10.55 # Insert your home-assistant IP here
    conditions:
      ready: true
ports:
  - name: http
    port: 8123
    protocol: TCP
